# southriverblog

./: .gitignore  .nojekyll  README.md  README_chart_extraction.md  _config.yml  best_model.pth  chart-viewer.js  data.csv  data.json  index.html  plot-config.js  post.html  posts-viewer.js  pyproject.toml
chart_json/: democratization_over_time.json
dutch_politics/: http_scraper_ob.py  index.py  model.py  prompter.py
dutch_politics/store/: bytes_store_disk.py  bytes_store_mongo.py  bytes_store_postgres.py  bytes_store_s3.py  bytes_store_sqlite.py  dict_store_base.py  dict_store_bytes.py  dict_store_cache.py  dict_store_disk.py  dict_store_memory.py  dict_store_mongo.py  dict_store_postgres.py  dict_store_sqlite.py  object_store_base.py  object_store_cache.py  object_store_nested.py  store_provider_base.py  store_provider_cache.py  store_provider_disk.py  store_provider_memory.py  store_provider_mongo.py  store_provider_s3.py  store_provider_sqlite.py  vector_store_cache.py  vector_store_object.py  vector_store_pinecone.py  vector_store_provider_base.py  vector_store_provider_cache.py  vector_store_provider_pinecone.py  vector_store_provider_sqlite.py
extract_chart/model/: __init__.py  chart_prompt_model.py
extract_chart/prompter/: __init__.py  chart_extractor.py
extract_chart/script/: extract_chart_data.py  extract_chart_metadata.py
paragliding/: experiment.py  flight_conditions.py  flight_policy.py  flight_policy_neural.py  model.py  respository.py  simulator.py  simulator_crude.py  tools_paragliding.py  tools_plot.py  tools_sim.py
paragliding/script/: check_cuda.py  install_torch_cuda.py  plot_conditions.py  plot_drag.py  plot_hist.py  plot_sim.py  plot_sim_hist.py  train_neural_policy.py
post_markdown/: a-slightly-more-advanced-model-for-paragliding-atmospherics.md  manifest.json  paragliding.md  post-165eyjsbb8ngyp9qgcalbibiiai2-dcdz8v-so3oj3vw.md  the equality pulse.md  the-desk.md  the-equality-pulse.md  the-insane-engineering-of-paragliding.md  the-speed-to-fly-in-2026.md  why-i-canceled-my-economist-subscription-after-20-years-of-reading-weekly.md
script/: download_post.py  extract_chart_coordinates.py
scripts/: commit_and_push.py  download_post.py
southriverblog/: __init__.py
southriverblog/model/: tools_post.py
southriverblog/script/: download_post.py
