[tool.poetry]
name = "southriverblog"
version = "0.1.0"
description = ""
authors = ["Jaap Oosterbroek <jaap.oosterbroek@gmail.com>"]
readme = "README.md"
packages = [{include = "southriverblog"}]

[tool.poetry.dependencies]
python = "^3.11.1"
langchain-openai = "^0.1.0"
langchain-core = "^0.2.0"
openai = "^1.0.0"
pillow = "^10.0.0"
requests = "^2.32.5"
pydantic = "^2.0.0"
opencv-python = "^4.12.0.88"
matplotlib = "^3.10.8"
scikit-learn = "^1.8.0"
#findpeaks = "^2.7.5"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

