[tool.poetry]
name = "southriverblog"
version = "0.1.0"
description = ""
authors = ["Jaap Oosterbroek <jaap.oosterbroek@gmail.com>"]
readme = "README.md"
packages = [{include = "southriverblog"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
langchain-openai = "^0.1.0"
langchain-core = "^0.2.0"
openai = "^1.0.0"
pillow = "^10.0.0"
requests = "^2.32.5"
pydantic = "^2.0.0"
opencv-python = "^4.12.0.88"
matplotlib = "^3.10.8"
scikit-learn = "^1.8.0"
#findpeaks = "^2.7.5"
beautifulsoup4 = "^4.14.3"
fastapi = "^0.128.0"
boto3 = "^1.42.18"
torch = "^2.10.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Enable a comprehensive set of linting rules
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "PTH", # flake8-use-pathlib
    "PD",  # pandas-vet
    "PL",  # Pylint
    "TRY", # tryceratops
    "RUF", # Ruff-specific rules
]
ignore = [
    "E501",  # Line too long (handled by formatter)
    "PLR0913", # Too many arguments
    "PLR0912", # Too many branches
    "PLR0915", # Too many statements
    "ARG002" #unused arguments
]

# Set the maximum line length
line-length = 100

# Exclude common directories
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"
# Use spaces for indentation
indent-style = "space"
# Respect magic trailing comma (don't skip them)
skip-magic-trailing-comma = false

[tool.ruff.isort]
# Use known-first-party for your package
known-first-party = ["southriverblog"]
